added Jordan's edits

--- a/05-FiguresAndTables.Rmd
+++ b/05-FiguresAndTables.Rmd
@@ -9,20 +9,20 @@ output:
 
 *Last updated `r Sys.Date()`*
 
-These guidelines are based on current \"best practices\" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. They aim to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
+These guidelines are based on current \"best practices\" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
 ## Tables
 
 When presenting data in a table keep in mind the following:
 
 * The heading is placed above the table.
-* The table should be interpretable as a stand alone object using an informative heading and judicious footnotes
-* Sample sizes and units are always included
-* Use horizontal lines only; these are often placed above and below headings, and at bottom of table
+* The table should be interpretable as a stand alone object using an informative heading and judicious footnotes.
+* Sample sizes and units are always included.
+* Use horizontal lines only; these are often placed above and below headings, and at the bottom of tables.
 
 ### Example {-}
 
-The following is an example of a properly formatted table
+The following is an example of a properly formatted table.
 
 **Table 1.** Summary of trait measurements made on individuals of *Solidago* ssp. collected within shaded and open habitats in the vicinity of Portland, Oregon.
 
@@ -74,24 +74,25 @@ Here are some general guidelines to follow when displaying descriptive or summar
 
 **Describing Numerical Variables**
 
-* Report mean with standard deviation, and additionally median with inter-quartile range for variables that exhibit a non-normal frequency distribution (e.g. is skewed) or that includes outliers
-* Parameter estimates (i.e. mean) should be accompanied by measures of uncertainty, i.e. the *standard error of the mean* (SEM) or confidence *interval* (notation: lower limit – upper limit); confidence *limits*: (lower limit, upper limit)
-* Confidence intervals are strongly encouraged because they inform about *effect size*
-* Measures of uncertainty for an estimate, such as SEM, can be preceded by a ± sign; do not make the common mistake of reporting a ± sign with a standard deviation, as it is not a measure of uncertainty in an estimate
+* Report mean with standard deviation, and additionally median with inter-quartile range for variables that exhibit a non-normal frequency distribution (e.g. is skewed) or that includes outliers.
+* Parameter estimates (i.e. mean) should be accompanied by measures of uncertainty, i.e. the *standard error of the mean* (SEM); confidence *interval* (notation: lower limit – upper limit); or confidence *limits*: (lower limit, upper limit).
+* Confidence intervals are strongly encouraged because they inform about *effect size*.
+* Measures of uncertainty for an estimate, such as SEM, can be preceded by a ± sign; do not make the common mistake of reporting a ± sign with a standard deviation, as it is not a measure of uncertainty in an estimate.
 
 **Describing Categorical Variables**
 
-* Report a frequency table (raw data) or a summary table with proportions for categories (the main descriptive statistic of interest), along with the confidence interval for the proportion if appropriate
+* Report a frequency table for the raw data 
+* Alternatively, since proportions are the main descriptive statistic of interest, provide a summary table with proportions for each category. Include the confidence interval for the proportion if appropriate. 
 
 ## Results of Statistical Tests
 
 Here are some guidelines for reporting the results of statistical tests: 
 
-* Your *Methods* section should clearly state the significance level (α), and this should be decided prior to the study
-* Test statistics (e.g. Student’s *t* or an \"F\" from ANOVA) should be rounded to 2 decimal places, and associated *P*-values should report 3 decimal places, or if smaller than 0.001, then <0.001. *P*-values do not indicate effect size, so reporting *P* = 10^-6 is not more impressive than *P* <0.001 
-* Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom (*df*) or sample sizes, *P*-value, and confidence interval (if appropriate) in parentheses.
+* Your *Methods* section should clearly state your significance level (α), which should be decided prior to the beginning of the study.
+* Test statistics (e.g. Student’s *t* or an \"F\" from ANOVA) should be rounded to 2 decimal places, and associated *P*-values should report 3 decimal places. If your *P*-value is less than 0.001, it should be reported as <0.001. *P*-values do not indicate effect size, so reporting *P* = 10^-6 is not more impressive than *P* <0.001.
+* In the absence of a table, your concluding statement should include the name of the test, test statistic value, degrees of freedom (df) or sample sizes, P-value, and confidence interval (if appropriate). All of this should be in parentheses.
 	* For example: \"On average, hair loss was significantly greater among fathers compared to childless men (Welch’s 2-sample *t*-test; *t* = 4.23; *n* F = 18, *n* C = 20; *P* = 0.018; 95% CI for difference: 9.34 – 18.22%).\"  
-* Regression and ANOVA results should be shown in a standard ANOVA table format
+* Regression and ANOVA results should be shown in a standard ANOVA table format.
 
 **Example of ANOVA table format**
 
@@ -110,16 +111,16 @@ When displaying data using a figure, follow these guidelines:
 * The figure heading should be placed below the graph and should provide sufficient information so the figure can be interpreted on its own
 * The heading can include statistical statements (Fig. 1) or simply describe what is being shown (Fig. 2)
 * Sample size(s) must be reported
-* The first time a particular type of graph is shown (e.g. boxplot), details of graph features must be provided. Subsequent figures of the same type can refer to the first for details. See Fig. 2 for an example
+* The first time a particular type of graph is shown (e.g. boxplot), an explanation of the graph features must be provided. Subsequent figures of the same type can refer to the first for details. See Fig. 2 for an example
 * Use hollow symbols so that overlapping points can be seen (Fig. 3)
 * Orient all text horizontal (except *y*-axis label), including all tick labels
-* Place axis tick marks outside of figure border to avoid overlapping with observations
+* Place axis tick marks outside of the figure border to avoid overlapping with observations
 * Data points should not touch the axes
 * Fitted lines (e.g. least-squares regression) included in figures should be fully explained in the heading, 
 	* e.g. \“Line represents a least-squares linear regression line, *y* = 0.3 + 4.5*x* (*F* = 5.65, df = 36; P = 0.021)\”. 
 * For more complex statistics (e.g. lines associated with mixed effects models) refer the reader to the text for details
 * Bar plots should **only** be used to visualize categorical data (e.g. proportion of students with brown or blue eyes) or counts (number of flies on scat)
-* When comparing numerical data among categories or groups (Figs. 1,2) use stripcharts (Fig. 1) when sample sizes are small (i.e. <20) and boxplots otherwise (Fig. 2). 
+* When comparing numerical data among categories or groups (Figs. 1,2), use stripcharts (Fig. 1) when sample sizes are small (i.e. <20) and boxplots otherwise (Fig. 2). 
 * Note that the stripchart has the advantage of showing all the data (i.e. each observation is represented by a point), whereas the boxplot summarizes the data visually.  When sample sizes per group are very large, it would get very messy if you tried to show all the data.  However, there are graphs like ["violin plots"](https://www.r-graph-gallery.com/violin.html) that offer a nice compromise. 
 
 ### Examples {-}
