--- a/04-TidyData.Rmd
+++ b/04-TidyData.Rmd
@@ -2,7 +2,7 @@
 
 *Last updated `r Sys.Date()`*
 
-We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When well organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
+We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
 In general, your data files should adhere to the principles of \"tidy data\". Tidy data is governed by the following 3 rules^[See: Wickham, H. & Grolemund, G. (2017). [Tidy Data](https://r4ds.had.co.nz/tidy-data.html). *In R for Data Science*.]:
 
@@ -36,7 +36,7 @@ So, say we collected data about the number of trout caught at local lakes across
 | Postill-lake | 3                  |
 | Ellison-lake | 0                  |
 
-It is also very likely though that we set up an Excel sheet where we recorded the site as the first column and our days and fish caught combined in subsequent columns, one column for each day. Even if we hadn't collected our data this way, we might be tempted to group our above data together for analysis or assignment submission in this way.
+It is also very likely that we set up an Excel sheet where we recorded the site as the first column and our days and fish caught combined in subsequent columns, one column for each day. Even if we hadn't collected our data this way, we might be tempted to group our above data together for analysis or assignment submission in this way.
 
 Doing this, we'd end up with a table something like the following:
 
@@ -58,7 +58,7 @@ So let's get this cleaned up...
 
 In the previous example, our data were organized where day and quantity caught shared common columns. That is, not every variable had a dedicated column and consequently, not every variable had a value in every given cell - day did not have any cell values.
 
-Tidy data breaks this down and reserves on column per variable and one row per observation. Remember, we have three variables: site, day, and quantity caught. So let's transform this...
+Tidy data breaks this down and reserves one column per variable and one row per observation. Remember, we have three variables: site, day, and quantity caught. So let's transform this...
 
 First, working with a collection tool where we have one table per day:
 
