--- a/06-Markdown.Rmd
+++ b/06-Markdown.Rmd
@@ -4,16 +4,16 @@
 
 *Last updated `r Sys.Date()`*
 
-Markdown is a markup language that is used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on a principle of separating out content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text so any computer anywhere at anytime will be able to open them and consequently, we will be able to read them.
+Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
 Benefits of Markdown:
 
 * Simple and easy to learn
-* Can be used to generate many different outputs formats (ie. pdf, html, docx etc.)
+* Can be used to generate many different output formats (i.e. pdf, html, docx etc.)
 * Can be read on any device with any operating system 
-* Many different web-applications and websites (ie. Reddit, GitHub) use it 
+* Many different web-applications and websites (e.g. Reddit, GitHub) use markdown 
 
-In fact, when we think about best practices in science leveraging tools that allow for reproducibility and interpretability (they are independent of specific operating systems or programs for example), Markdown is an essential authoring tool.
+In fact, when we think about the best practices in science, Markdown is an essential authoring tool because it allows for reproducibility and interpretability (i.e. is independent of specific operating systems or programs).
 
 To learn more about Markdown see Matt Cone's Markdown Guide [here](https://www.markdownguide.org/getting-started#:~:text=Why%20Use%20Markdown%3F%201%20Markdown%20can%20be%20used,future%20proof.%20...%205%20Markdown%20is%20everywhere.%20).
 
@@ -23,7 +23,7 @@ Markdown is a two step process. You write, with markup, in a plain text file. An
 
 ![](images/MD_translation.png)
 
-This makes markdown very useful for producing many different types of documents from the same piece of prose, whether that be pdf, html, docx you name it. It also means that you have one working, editable document, which is plain text, and a series of distributable copies in other formats. More importantly, formatted in a way to address the needs of that particular audience.
+This makes markdown very useful for producing many different types of documents from the same piece of prose, whether that be pdf, html, docx, you name it. It also means that you have one working, editable document, which is plain text, and a series of distributable copies in other formats. More importantly, formatted in a way to address the needs of that particular audience.
 
 All of the content that you\'re reading right now was authored in Markdown. Note at the top of the page, you can download this content as a pdf or as an epub. But we only had to write it once.
 
@@ -31,11 +31,11 @@ All of the content that you\'re reading right now was authored in Markdown. Note
 
 You'll need a text editor or a dedicated Markdown editor! What's the difference?
 
-A text editor will not format your markdown, it\'ll just display the plain text. When you open the <code>_README.md</code> files that are dotted througout this book in **textedit** on a Mac or **notepad** on a Windows machine, you\'re seeing this raw, plain text output.
+A text editor will not format your markdown, it\'ll just display the plain text. When you open the <code>_README.md</code> files noted throughout this book (either in **TextEdit** on a Mac or **Notepad** on Windows), you see the raw, plain text output.
 
 A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source.
 
-Already have a favourite text editor or Markdown editor? Great. If not, we\'d like to suggest the following, which provide an easy to use interface and work across two panes, one where you see your plain text output and one where you see how it will be rendered when formatted. Both are free and open source.
+Already have a favourite text editor or Markdown editor? Great. If not, we\'d like to suggest the following, which provide an easy-to-use interface and work across two panes, one where you see your plain text output and one where you see how it will be rendered when formatted. Both are free and open source.
 
 **Mac OS**
 
@@ -49,7 +49,7 @@ Markdown Edit available at https://mike-ward.net/Markdown-Edit/
 
 You can just start writing if you\'ve opened up a new document in MacDown, Markdown Edit, or whatever text or Markdown editor you happen to be using.
 
-There's a couple of things you\'ll note right away.
+However, there's a couple of things you\'ll note right away:
 
 * Whether you use one space, \" \", or many spaces in between your words, it will only render (display with formatting) as if there was one space.
 * Just hitting \'Enter\' once doesn't put you on a new line. You need to hit \'Enter\' twice.
@@ -58,7 +58,7 @@ There's a couple of things you\'ll note right away.
 
 ### Headings  {-}
 
-You can add structure to your text document by adding headers with different hierarchies. To do this you add a number sign `#` before the text. The number of `#` symbols indicates the hierarchy of the header.
+You can add structure to your text document by adding headers with different hierarchies. To do this, you add a number sign `#` before the text. The number of `#` symbols indicates the hierarchy of the header.
 
 Make sure you include a space \" \" between the `#` and your header
 
@@ -137,7 +137,7 @@ Output
 
 ***This is also bold and italicized***
 
-**NOTE** When italicizing or bolding characters within a string of text it\'s better to use an asterisk `*` rather than an underscore `_`. For example: Biology \*is\* awesome NOT Biology \_is\_ awesome
+**NOTE** When italicizing or bolding characters within a string of text, it\'s better to use an asterisk `*` rather than an underscore `_`. For example: Biology \*is\* awesome NOT Biology \_is\_ awesome
 
 ### Strikethrough  {-}
 
@@ -155,7 +155,7 @@ Input
 
 ## Code
 
-You can show text as code by encasing it with three back ticks, \`\`\`. 
+You can show text as code by encasing it with three backticks, \`\`\`. 
 
 Input
 
@@ -295,4 +295,4 @@ Output
 
 Everything here is basic, or core, Markdown and will be supported by any markdown editor. Since Markdown is simply encoding document structure through markup, several different implementations have expanded on this core set and allow you to do other things, including footnotes, references etc.
 
-We\'ll just keep it simple for the moment; this is all you really need for your <code>_README.md</code> files! Later, you\'ll be introduced to RMarkdown which, when used in conjunction with R, will allow you to render statistical analyses within your Markdown document and build reference lists among other things.
+We\'ll keep it simple for the moment; this is all you really need for your <code>_README.md</code> files! Later, you\'ll be introduced to RMarkdown, which, when used in conjunction with R, will allow you to render statistical analyses within your Markdown document and build reference lists, among other things.
