--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -79,7 +79,7 @@
 
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-08-11}
+\date{2021-08-12}
 
 \begin{document}
 \maketitle
@@ -157,7 +157,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -180,7 +180,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -192,13 +192,13 @@ We'll start with the rules, we'll then break these rules down and explain the pr
 \begin{itemize}
 \tightlist
 \item
-  File names should only contain letters in the English alphabet, numbers from 1-9, dashes "-", and underscores "\_".
+  File names should only contain letters in the English alphabet, numbers from 1-9, dashes \texttt{-}, and underscores \texttt{\_}.
 \item
   Do not use spaces or special characters, including \# \% \& \textless{} \textgreater{} : " / ~\textbar{} ? * \{ \} \$ ! ' @ + ` =
 \item
-  File names should be broken down into components that are separated by underscores "\_".
+  File names should be broken down into components that are separated by underscores \texttt{\_}.
 \item
-  If more than one word is needed in each component, these are separated by dashes "-".
+  If more than one word is needed in each component, these are separated by dashes \texttt{-}.
 \item
   All files should start with your last name and all other components should be meaningful (read on for what it means for a file name to be meaningful!)
 \end{itemize}
@@ -277,10 +277,18 @@ How do we do this? We avoid special characters and follow conventions.
 \addcontentsline{toc}{subsubsection}{Special characters}
 
 Special characters are all characters \textbf{except}:
-* Any character that is a part of the English alphabet
-* Numbers from 0 - 9
-* Dashes "-"
-* Underscores "\_"
+
+\begin{itemize}
+\tightlist
+\item
+  Any character that is a part of the English alphabet
+\item
+  Numbers from \texttt{0\ -\ 9}
+\item
+  Dashes \texttt{-}
+\item
+  Underscores \texttt{\_}
+\end{itemize}
 
 This means that a space " " is a special character, which means that your file names should not have spaces.
 
@@ -290,7 +298,7 @@ When operating in a multi-lingual or non-English environment, this can prove pro
 \subsubsection*{Conventions}\label{conventions}}
 \addcontentsline{toc}{subsubsection}{Conventions}
 
-Convention has file naming proceed in the following order, with each element separated by an underscore "\_", and words within an element joined with a dash "-". The file type is generally added with a period "." and is usually automatically generated when an application creates a file.
+Convention has file naming proceed in the following order, with each element separated by an underscore \texttt{\_}, and words within an element joined with a dash \texttt{-}. The file type is generally added with a period \texttt{.} and is usually automatically generated when an application creates a file.
 
 \begin{longtable}[]{@{}llllll@{}}
 \toprule
@@ -305,7 +313,7 @@ Last-Name & \_Date & \_Project & \_File-Contents & \_Version & .File-type \\
 \subsubsection*{Dates}\label{dates}}
 \addcontentsline{toc}{subsubsection}{Dates}
 
-Dates should be written in the following format: \textbf{yyyymmdd}. They should contain no spaces, no dashes, no words, just 8 numbers. Months and Days that are from 1 - 9 should be led by a 0. For example, January 23, 2020, should be written \textbf{20200123}. When written this way, your computer will always sort your files from the earliest date to the latest date.
+Dates should be written in the following format \texttt{yyyymmdd}. They should contain no spaces, no dashes, no words, just 8 numbers. Months and Days that are from 1 - 9 should be led by a 0. For example, January 23, 2020, should be written \textbf{20200123}. When written this way, your computer will always sort your files from the earliest date to the latest date.
 
 Keeping track of dates is especially important for data because the date on which your data was collected has direct relevance. Dates are less important for things like figures because they are derived from previously dated data.
 
@@ -448,7 +456,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -844,9 +852,9 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
-We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When well organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
+We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
 In general, your data files should adhere to the principles of "tidy data". Tidy data is governed by the following 3 rules\footnote{See: Wickham, H. \& Grolemund, G. (2017). \href{https://r4ds.had.co.nz/tidy-data.html}{Tidy Data}. \emph{In R for Data Science}.}:
 
@@ -902,7 +910,7 @@ Ellison-lake & 0 \\
 \bottomrule
 \end{longtable}
 
-It is also very likely though that we set up an Excel sheet where we recorded the site as the first column and our days and fish caught combined in subsequent columns, one column for each day. Even if we hadn't collected our data this way, we might be tempted to group our above data together for analysis or assignment submission in this way.
+It is also very likely that we set up an Excel sheet where we recorded the site as the first column and our days and fish caught combined in subsequent columns, one column for each day. Even if we hadn't collected our data this way, we might be tempted to group our above data together for analysis or assignment submission in this way.
 
 Doing this, we'd end up with a table something like the following:
 
@@ -936,7 +944,7 @@ So let's get this cleaned up\ldots{}
 
 In the previous example, our data were organized where day and quantity caught shared common columns. That is, not every variable had a dedicated column and consequently, not every variable had a value in every given cell - day did not have any cell values.
 
-Tidy data breaks this down and reserves on column per variable and one row per observation. Remember, we have three variables: site, day, and quantity caught. So let's transform this\ldots{}
+Tidy data breaks this down and reserves one column per variable and one row per observation. Remember, we have three variables: site, day, and quantity caught. So let's transform this\ldots{}
 
 First, working with a collection tool where we have one table per day:
 
@@ -1040,9 +1048,9 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
-These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. They aim to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
+These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
 \hypertarget{tables}{%
 \section{Tables}\label{tables}}
@@ -1054,18 +1062,18 @@ When presenting data in a table keep in mind the following:
 \item
   The heading is placed above the table.
 \item
-  The table should be interpretable as a stand alone object using an informative heading and judicious footnotes
+  The table should be interpretable as a stand alone object using an informative heading and judicious footnotes.
 \item
-  Sample sizes and units are always included
+  Sample sizes and units are always included.
 \item
-  Use horizontal lines only; these are often placed above and below headings, and at bottom of table
+  Use horizontal lines only; these are often placed above and below headings, and at the bottom of tables.
 \end{itemize}
 
 \hypertarget{example}{%
 \subsection*{Example}\label{example}}
 \addcontentsline{toc}{subsection}{Example}
 
-The following is an example of a properly formatted table
+The following is an example of a properly formatted table.
 
 \textbf{Table 1.} Summary of trait measurements made on individuals of \emph{Solidago} ssp. collected within shaded and open habitats in the vicinity of Portland, Oregon.
 
@@ -1145,13 +1153,13 @@ Here are some general guidelines to follow when displaying descriptive or summar
 \begin{itemize}
 \tightlist
 \item
-  Report mean with standard deviation, and additionally median with inter-quartile range for variables that exhibit a non-normal frequency distribution (e.g.~is skewed) or that includes outliers
+  Report mean with standard deviation, and additionally median with inter-quartile range for variables that exhibit a non-normal frequency distribution (e.g.~is skewed) or that includes outliers.
 \item
-  Parameter estimates (i.e.~mean) should be accompanied by measures of uncertainty, i.e.~the \emph{standard error of the mean} (SEM) or confidence \emph{interval} (notation: lower limit -- upper limit); confidence \emph{limits}: (lower limit, upper limit)
+  Parameter estimates (i.e.~mean) should be accompanied by measures of uncertainty, i.e.~the \emph{standard error of the mean} (SEM); confidence \emph{interval} (notation: lower limit -- upper limit); or confidence \emph{limits}: (lower limit, upper limit).
 \item
-  Confidence intervals are strongly encouraged because they inform about \emph{effect size}
+  Confidence intervals are strongly encouraged because they inform about \emph{effect size}.
 \item
-  Measures of uncertainty for an estimate, such as SEM, can be preceded by a ± sign; do not make the common mistake of reporting a ± sign with a standard deviation, as it is not a measure of uncertainty in an estimate
+  Measures of uncertainty for an estimate, such as SEM, can be preceded by a ± sign; do not make the common mistake of reporting a ± sign with a standard deviation, as it is not a measure of uncertainty in an estimate.
 \end{itemize}
 
 \textbf{Describing Categorical Variables}
@@ -1159,7 +1167,9 @@ Here are some general guidelines to follow when displaying descriptive or summar
 \begin{itemize}
 \tightlist
 \item
-  Report a frequency table (raw data) or a summary table with proportions for categories (the main descriptive statistic of interest), along with the confidence interval for the proportion if appropriate
+  Report a frequency table for the raw data
+\item
+  Alternatively, since proportions are the main descriptive statistic of interest, provide a summary table with proportions for each category. Include the confidence interval for the proportion if appropriate.
 \end{itemize}
 
 \hypertarget{results-of-statistical-tests}{%
@@ -1170,11 +1180,11 @@ Here are some guidelines for reporting the results of statistical tests:
 \begin{itemize}
 \tightlist
 \item
-  Your \emph{Methods} section should clearly state the significance level (α), and this should be decided prior to the study
+  Your \emph{Methods} section should clearly state your significance level (α), which should be decided prior to the beginning of the study.
 \item
-  Test statistics (e.g.~Student's \emph{t} or an "F" from ANOVA) should be rounded to 2 decimal places, and associated \emph{P}-values should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \emph{P}-values do not indicate effect size, so reporting \emph{P} = 10\^{}-6 is not more impressive than \emph{P} \textless0.001
+  Test statistics (e.g.~Student's \emph{t} or an "F" from ANOVA) should be rounded to 2 decimal places, and associated \emph{P}-values should report 3 decimal places. If your \emph{P}-value is less than 0.001, it should be reported as \textless0.001. \emph{P}-values do not indicate effect size, so reporting \emph{P} = 10\^{}-6 is not more impressive than \emph{P} \textless0.001.
 \item
-  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom (\emph{df}) or sample sizes, \emph{P}-value, and confidence interval (if appropriate) in parentheses.
+  In the absence of a table, your concluding statement should include the name of the test, test statistic value, degrees of freedom (df) or sample sizes, P-value, and confidence interval (if appropriate). All of this should be in parentheses.
 
   \begin{itemize}
   \tightlist
@@ -1182,7 +1192,7 @@ Here are some guidelines for reporting the results of statistical tests:
     For example: "On average, hair loss was significantly greater among fathers compared to childless men (Welch's 2-sample \emph{t}-test; \emph{t} = 4.23; \emph{n} F = 18, \emph{n} C = 20; \emph{P} = 0.018; 95\% CI for difference: 9.34 -- 18.22\%)."\\
   \end{itemize}
 \item
-  Regression and ANOVA results should be shown in a standard ANOVA table format
+  Regression and ANOVA results should be shown in a standard ANOVA table format.
 \end{itemize}
 
 \textbf{Example of ANOVA table format}
@@ -1214,13 +1224,13 @@ When displaying data using a figure, follow these guidelines:
 \item
   Sample size(s) must be reported
 \item
-  The first time a particular type of graph is shown (e.g.~boxplot), details of graph features must be provided. Subsequent figures of the same type can refer to the first for details. See Fig. 2 for an example
+  The first time a particular type of graph is shown (e.g.~boxplot), an explanation of the graph features must be provided. Subsequent figures of the same type can refer to the first for details. See Fig. 2 for an example
 \item
   Use hollow symbols so that overlapping points can be seen (Fig. 3)
 \item
   Orient all text horizontal (except \emph{y}-axis label), including all tick labels
 \item
-  Place axis tick marks outside of figure border to avoid overlapping with observations
+  Place axis tick marks outside of the figure border to avoid overlapping with observations
 \item
   Data points should not touch the axes
 \item
@@ -1236,7 +1246,7 @@ When displaying data using a figure, follow these guidelines:
 \item
   Bar plots should \textbf{only} be used to visualize categorical data (e.g.~proportion of students with brown or blue eyes) or counts (number of flies on scat)
 \item
-  When comparing numerical data among categories or groups (Figs. 1,2) use stripcharts (Fig. 1) when sample sizes are small (i.e.~\textless20) and boxplots otherwise (Fig. 2).
+  When comparing numerical data among categories or groups (Figs. 1,2), use stripcharts (Fig. 1) when sample sizes are small (i.e.~\textless20) and boxplots otherwise (Fig. 2).
 \item
   Note that the stripchart has the advantage of showing all the data (i.e.~each observation is represented by a point), whereas the boxplot summarizes the data visually. When sample sizes per group are very large, it would get very messy if you tried to show all the data. However, there are graphs like \href{https://www.r-graph-gallery.com/violin.html}{``violin plots''} that offer a nice compromise.
 \end{itemize}
@@ -1264,9 +1274,9 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
-Markdown is a markup language that is used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on a principle of separating out content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text so any computer anywhere at anytime will be able to open them and consequently, we will be able to read them.
+Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
 Benefits of Markdown:
 
@@ -1275,14 +1285,14 @@ Benefits of Markdown:
 \item
   Simple and easy to learn
 \item
-  Can be used to generate many different outputs formats (ie. pdf, html, docx etc.)
+  Can be used to generate many different output formats (i.e.~pdf, html, docx etc.)
 \item
   Can be read on any device with any operating system
 \item
-  Many different web-applications and websites (ie. Reddit, GitHub) use it
+  Many different web-applications and websites (e.g.~Reddit, GitHub) use markdown
 \end{itemize}
 
-In fact, when we think about best practices in science leveraging tools that allow for reproducibility and interpretability (they are independent of specific operating systems or programs for example), Markdown is an essential authoring tool.
+In fact, when we think about the best practices in science, Markdown is an essential authoring tool because it allows for reproducibility and interpretability (i.e.~is independent of specific operating systems or programs).
 
 To learn more about Markdown see Matt Cone's Markdown Guide \href{https://www.markdownguide.org/getting-started\#:~:text=Why\%20Use\%20Markdown\%3F\%201\%20Markdown\%20can\%20be\%20used,future\%20proof.\%20...\%205\%20Markdown\%20is\%20everywhere.\%20}{here}.
 
@@ -1293,7 +1303,7 @@ Markdown is a two step process. You write, with markup, in a plain text file. An
 
 \includegraphics{images/MD_translation.png}
 
-This makes markdown very useful for producing many different types of documents from the same piece of prose, whether that be pdf, html, docx you name it. It also means that you have one working, editable document, which is plain text, and a series of distributable copies in other formats. More importantly, formatted in a way to address the needs of that particular audience.
+This makes markdown very useful for producing many different types of documents from the same piece of prose, whether that be pdf, html, docx, you name it. It also means that you have one working, editable document, which is plain text, and a series of distributable copies in other formats. More importantly, formatted in a way to address the needs of that particular audience.
 
 All of the content that you're reading right now was authored in Markdown. Note at the top of the page, you can download this content as a pdf or as an epub. But we only had to write it once.
 
@@ -1302,11 +1312,11 @@ All of the content that you're reading right now was authored in Markdown. Note 
 
 You'll need a text editor or a dedicated Markdown editor! What's the difference?
 
-A text editor will not format your markdown, it'll just display the plain text. When you open the \_README.md files that are dotted througout this book in \textbf{textedit} on a Mac or \textbf{notepad} on a Windows machine, you're seeing this raw, plain text output.
+A text editor will not format your markdown, it'll just display the plain text. When you open the \_README.md files noted throughout this book (either in \textbf{TextEdit} on a Mac or \textbf{Notepad} on Windows), you see the raw, plain text output.
 
 A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source.
 
-Already have a favourite text editor or Markdown editor? Great. If not, we'd like to suggest the following, which provide an easy to use interface and work across two panes, one where you see your plain text output and one where you see how it will be rendered when formatted. Both are free and open source.
+Already have a favourite text editor or Markdown editor? Great. If not, we'd like to suggest the following, which provide an easy-to-use interface and work across two panes, one where you see your plain text output and one where you see how it will be rendered when formatted. Both are free and open source.
 
 \textbf{Mac OS}
 
@@ -1321,7 +1331,7 @@ Markdown Edit available at \url{https://mike-ward.net/Markdown-Edit/}
 
 You can just start writing if you've opened up a new document in MacDown, Markdown Edit, or whatever text or Markdown editor you happen to be using.
 
-There's a couple of things you'll note right away.
+However, there's a couple of things you'll note right away:
 
 \begin{itemize}
 \tightlist
@@ -1338,9 +1348,9 @@ There's a couple of things you'll note right away.
 \subsection*{Headings}\label{headings}}
 \addcontentsline{toc}{subsection}{Headings}
 
-You can add structure to your text document by adding headers with different hierarchies. To do this you add a number sign "\#" before the text. The number of "\#" symbols indicates the hierarchy of the header.
+You can add structure to your text document by adding headers with different hierarchies. To do this, you add a number sign \texttt{\#} before the text. The number of \texttt{\#} symbols indicates the hierarchy of the header.
 
-Make sure you include a space " " between the "\#" and your header
+Make sure you include a space " " between the \texttt{\#} and your header
 
 For example, the following\ldots{}
 
@@ -1370,7 +1380,7 @@ There are a number of different Markdown syntaxes that we can use to add style a
 \subsection*{Italics}\label{italics}}
 \addcontentsline{toc}{subsection}{Italics}
 
-You can make text italicized by encasing the text in a single asterisk "*" or underscore "\_".
+You can make text italicized by encasing the text in a single asterisk \texttt{*} or underscore \texttt{\_}.
 
 Input
 
@@ -1390,8 +1400,8 @@ Output
 \subsection*{Bold}\label{bold}}
 \addcontentsline{toc}{subsection}{Bold}
 
-You can make text bold by encasing the text in two asterisks "**" or underscores
-"\_\_".
+You can make text bold by encasing the text in two asterisks \texttt{**} or underscores
+\texttt{\_\_}.
 
 Input
 
@@ -1411,7 +1421,7 @@ Output
 \subsubsection*{Bold and Italics}\label{bold-and-italics}}
 \addcontentsline{toc}{subsubsection}{Bold and Italics}
 
-If you want to make text both bold and italicized you can encase the text with three asterisks "***" or underscores "\_\_\_".
+If you want to make text both bold and italicized you can encase the text with three asterisks \texttt{***} or underscores \texttt{\_\_\_}.
 
 Input
 
@@ -1427,13 +1437,13 @@ Output
 
 \textbf{\emph{This is also bold and italicized}}
 
-\textbf{NOTE} When italicizing or bolding characters within a string of text it's better to use an asterisk "*" rather than an underscore "\_". For example: Biology *is* awesome NOT Biology \_is\_ awesome
+\textbf{NOTE} When italicizing or bolding characters within a string of text, it's better to use an asterisk \texttt{*} rather than an underscore \texttt{\_}. For example: Biology *is* awesome NOT Biology \_is\_ awesome
 
 \hypertarget{strikethrough}{%
 \subsection*{Strikethrough}\label{strikethrough}}
 \addcontentsline{toc}{subsection}{Strikethrough}
 
-You can strike through text by encasing it with two tildes, "\textasciitilde\textasciitilde".
+You can strike through text by encasing it with two tildes, \texttt{\textasciitilde{}\textasciitilde{}}.
 
 Input
 
@@ -1448,7 +1458,7 @@ Output
 \hypertarget{code}{%
 \section{Code}\label{code}}
 
-You can show text as code by encasing it with three back ticks, ```.
+You can show text as code by encasing it with three backticks, ```.
 
 Input
 
@@ -1467,7 +1477,7 @@ This text looks like code
 \hypertarget{blockquotes}{%
 \section{Blockquotes}\label{blockquotes}}
 
-To create a blockquote using markdown, you need to place a greater-than, "\textgreater" sign in front of the text.
+To create a blockquote using markdown, you need to place a greater-than, \texttt{\textgreater{}} sign in front of the text.
 
 Input
 
@@ -1517,7 +1527,7 @@ Output:
 \subsection*{Unordered lists}\label{unordered-lists}}
 \addcontentsline{toc}{subsection}{Unordered lists}
 
-You can create an unordered list by placing an asterisk "*", dash "-", or plus sign "+" infront of the text.
+You can create an unordered list by placing an asterisk \texttt{*}, dash \texttt{-}, or plus sign \texttt{+} in front of the text.
 
 Input
 
@@ -1554,13 +1564,13 @@ Output
 \hypertarget{tables-1}{%
 \section{Tables}\label{tables-1}}
 
-When creating tables using Markdown, pipes "\textbar" separate columns while line breaks are used to separate rows. The column header is seperated by three or more hyphens "-\/-\/-" between each column's pipe "\textbar".
+When creating tables using Markdown, pipes \texttt{\textbar{}} separate columns while line breaks are used to separate rows. The column header is separated by three or more hyphens \texttt{-\/-\/-} between each column's pipe \texttt{\textbar{}}. A colon \texttt{:} can be added to the left of the hyphens to left align the column, to the right to right align, and on both ends to centre. The following example is left aligned.
 
 Input
 
 \begin{verbatim}
 | Column 1 Header | Column 2 Header | Column 3 Header |
-| --- | --- | --- |
+| :--- | :--- | :--- |
 | Column 1 item | Column 2 item | Column 3 item |
 | Column 1 item | Column 2 item | Column 3 item |
 \end{verbatim}
@@ -1582,15 +1592,15 @@ Column 1 item & Column 2 item & Column 3 item \\
 \begin{itemize}
 \tightlist
 \item
-  The number of hyphens, "-", used can make the cell width look incorrect. However, as long as there are three or more hyphens the rendered output will be the same.
+  The number of hyphens, \texttt{-}, used can make the cell width look incorrect. However, as long as there are three or more hyphens the rendered output will be the same.
 \item
-  Put a space, " ", between each pipe "\textbar" and the following word or dash "-"
+  Put a space, " ", between each pipe \texttt{\textbar{}} and the following word or dash \texttt{-}
 \end{itemize}
 
 \hypertarget{links}{%
 \section{Links}\label{links}}
 
-To create a link to a url or another document, encase the text with square brackets, "{[}{]}", and follow the text immediately with the link encased in parentheses, "()".
+To create a link to a url or another document, encase the text with square brackets, \texttt{{[}\ {]}}, and follow the text immediately with the link encased in parentheses, \texttt{(\ )}.
 
 Input
 
@@ -1605,7 +1615,7 @@ To visit the UBC Okanagan Faculty of Biology website click \href{https://biology
 \hypertarget{images}{%
 \section{Images}\label{images}}
 
-Creating a link to an image follows a similar format to that of links, but the square brackets encasing the text are preceded with an exclamation mark "!". You can place either the url link or path to the image on your computer in the parentheses. If using a path on your computer, use a relative path.
+Creating a link to an image follows a similar format to that of links, but the square brackets encasing the text are preceded with an exclamation mark \texttt{!}. You can place either the url link or path to the image on your computer in the parentheses. If using a path on your computer, use a relative path.
 
 Input
 
@@ -1627,14 +1637,14 @@ Output
 
 Everything here is basic, or core, Markdown and will be supported by any markdown editor. Since Markdown is simply encoding document structure through markup, several different implementations have expanded on this core set and allow you to do other things, including footnotes, references etc.
 
-We'll just keep it simple for the moment; this is all you really need for your \_README.md files! Later, you'll be introduced to RMarkdown which, when used in conjunction with R, will allow you to render statistical analyses within your Markdown document and build reference lists among other things.
+We'll keep it simple for the moment; this is all you really need for your \_README.md files! Later, you'll be introduced to RMarkdown, which, when used in conjunction with R, will allow you to render statistical analyses within your Markdown document and build reference lists, among other things.
 
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
-This is a brief overview of the 7th edition of APA for quick reference. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consul the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
+This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
 Additional resources you may wish to consult include:
 
@@ -1649,7 +1659,7 @@ Additional resources you may wish to consult include:
 \hypertarget{in-text-citations}{%
 \section{In-text Citations}\label{in-text-citations}}
 
-Always appear right after the content you are summarizing, paraphrasing, or quoting. The format is as follows:
+In-text citations always appear right after the content you are summarizing, paraphrasing, or quoting. The format is as follows:
 
 \textbf{Summarizing or Paraphrasing}
 
@@ -1675,7 +1685,7 @@ Always appear right after the content you are summarizing, paraphrasing, or quot
 
 If you mention the author or authors in text, you do not need to include this information in the brackets, "()". This is called a narrative citation.
 
-\textbf{Narrative in-text citation:} Raimi (2018) outlines the risks and benefits of fracking through an economic analysis and energy security benefits.
+\textbf{Narrative in-text citation:} Raimi (2018) outlines the risks and benefits of fracking through economic analysis and energy security benefits.
 
 The alternative is called a parenthetical citation.
 
@@ -1717,7 +1727,7 @@ The alternative is called a parenthetical citation.
 \subsection*{Journal article with a DOI (1-2 authors)}\label{journal-article-with-a-doi-1-2-authors}}
 \addcontentsline{toc}{subsection}{Journal article with a DOI (1-2 authors)}
 
-List all authors in reference list and in-text citations.
+List all authors in the reference list and in-text citations.
 
 Janmaat, J., \& Rahimova, N. (2018). Managing drought risk in the Okanagan: A roll for dry-year option contracts? \emph{Canadian Public Policy}, \emph{44}(2), 112-125. \url{https://doi.org/10.3138/cpp.2017-003}
 
@@ -1725,14 +1735,14 @@ Janmaat, J., \& Rahimova, N. (2018). Managing drought risk in the Okanagan: A ro
 \subsection*{Journal article with a DOI (3-20 authors)}\label{journal-article-with-a-doi-3-20-authors}}
 \addcontentsline{toc}{subsection}{Journal article with a DOI (3-20 authors)}
 
-List all authors in the reference list and only first author in the in-text citations.
+List all authors in the reference list and only the first author in the in-text citations.
 
 Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahmadabadi, H., Brooks, D. E., Lange, D., \& Kizhakkedathu, J. N. (2018). Polymer-nanoparticle interaction as a design principle in the development of a durable ultrathin universal binary antibiofilm coating with long-term activity. \emph{ACS Nano}, \emph{12}(12), 11881-11891. \url{https://doi.org/10.1021/acsnano.8b05512}
 
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1741,7 +1751,7 @@ Learn more about academic integrity from the \href{https://learningcommons.ubc.c
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1750,7 +1760,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-08-11}
+\emph{Last updated 2021-08-12}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
